--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,21 @@
-machine:
-  jobs: 4
-  pre:
-    - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
-    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
-    - sudo apt-get update
-    - sudo apt-get install dotnet-dev-1.0.0-rc4-004771
+version: 2.1
 
-compile: 
-  override:
-    - dotnet restore
-    - dotnet build    
-    - dotnet publish -o publish
-
-test:
-  override:
-    - echo "no tests"
+jobs:
+  build:
+    docker:
+      - image: circleci/<language>:<version TAG>
+    steps:
+      - checkout
+      - run:
+          name: Install .NET Core 1.0.0
+          command: |
+            sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
+            sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
+            sudo apt-get update
+            sudo apt-get install dotnet-dev-1.0.0-rc4-004771
+      - run:
+          name: Build and Test
+          command: |
+            dotnet restore
+            dotnet build
+            echo "no tests"
