--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,17 @@
-jobs: 4
-machine:
-  pre:
-    - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
-    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
-    - sudo apt-get update
-    - sudo apt-get install dotnet-dev-1.0.0-rc4-004771
+jobs:
+  machine:
+    pre:
+      - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
+      - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
+      - sudo apt-get update
+      - sudo apt-get install dotnet-dev-1.0.0-rc4-004771
 
-compile: 
-  override:
-    - dotnet restore
-    - dotnet build    
-    - dotnet publish -o publish
+  compile: 
+    override:
+      - dotnet restore
+      - dotnet build    
+      - dotnet publish -o publish
 
-test:
-  override:
-    - echo "no tests"
+  test:
+    override:
+      - echo "no tests"
