made changed in the config.yml for version 2.1

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,23 @@
-jobs: 4
-machine:
-  pre:
-    - sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
-    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
-    - sudo apt-get update
-    - sudo apt-get install dotnet-dev-1.0.0-rc4-004771
+version: 2.1
 
-compile: 
-  override:
-    - dotnet restore
-    - dotnet build    
-    - dotnet publish -o publish
+orbs:
+  win: circleci/windows@5.0
 
-test:
-  override:
-    - echo "no tests"
+workflows:
+  build-and-unittest:
+    jobs:
+      - build-and-test
+jobs:
+  build-and-test:
+    executor:
+      name: win/default
+      version: edge
+    steps:
+      - checkout
+      - run:
+          name: Build project 
+          command: dotnet build hello-world
+      - run:
+          name: Run project 
+          command: dotnet run
+
