--- a/hello-world.csproj
+++ b/hello-world.csproj
@@ -2,10 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>hello_world</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="1.1.1"/>
+  </ItemGroup>
 </Project>
